nullaway_error_85F34465-BF0B-4ADB-A0B8-54D8758B6C81.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-tx/src/main/java/org/springframework/transaction/interceptor/TransactionAspectSupport.java:906: error: [NullAway] dereferenced expression getCause() is @Nullable
			return getCause().toString();
			                 ^
    (see http://t.uber.com/nullaway )
